# Cappuccino

./: CMakeLists.txt  LICENSE  README.md  main.cpp
engine/: Board.cpp  CMakeLists.txt  Moves.cpp  Single_node_evaluation.cpp  main.cpp  minimax.cpp  single_node_evaluation.cpp  voronoi.cpp
engine/Headers/: Board.hpp  Global.hpp  Moves.hpp  Single_node_evaluation.hpp  endgame_piecetables.hpp  middlegame_piecetables.hpp  single_node_evaluation.hpp
engine/include/: Global.hpp  Moves.hpp  Single_node_evaluation.hpp  UCI.hpp  middlegame_piecetables.hpp  minimax.h
engine/src/: Board.cpp  Moves.cpp  Single_node_evaluation.cpp  UCI.cpp  main.cpp  minimax.cpp  voronoi.cpp
testing/: CMakeLists.txt  README.md  tests.cpp
